syntax = "proto3";
package f5.nginx.agent.api.grpc.mpi.v1.file;

import "common.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/nginx/agent/v3/api/grpc/mpi/v1";

service FileService {
    // Returns the collection of files for a particular configuration version of an instance
    rpc Overview(ConfigVersion) returns (FileOverview) {}
    // Get the file contents for a particular file
    rpc GetFile(FileRequest) returns (FileContents) {}
    // Send a file from the 
    rpc SendFile(File) returns (FileMeta) {}
}

// Represents a specific configuration version associated with an instance
message ConfigVersion {
    string instance_id = 1;
    string version = 2;
}

// Represents a collection of files
message FileOverview {
    repeated File file = 1;
    string previous_version = 2;
    string current_version = 3;
}

// Represents meta data about a file
message File {
    // Meta information about the file, the name (including path) and hash
    FileMeta file_meta = 1;
    // last modified time of the file (created time if never modified)
    google.protobuf.Timestamp modified_time = 2;
    // the permission set associated with a particular file
    string permissions = 3;
    // Size of the file in bytes
    int64 size = 4;
    // Action enum
    enum FileAction {
        // Default value, no action
        UNSET = 0;
        // No changes to the file
        UNCHANGED = 1;
        // New file
        ADD = 2;
        // Updated file
        UPDATE = 3;
        // File deleted
        DELETE = 4;
    }
    // optional action
    FileAction action = 5;
    FileContents contents = 6;
}

message FileRequest {
    f5.nginx.agent.api.grpc.mpi.v1.common.MessageRequest message_metadata = 1;
    FileMeta meta = 2;
}

// Represents the bytes contents of the file https://protobuf.dev/programming-guides/api/#dont-encode-data-in-a-string
message FileContents {
    bytes contents = 1;
}

// Meta information about the file, the name (including path) and hash
message FileMeta {
    string name = 1;
    string hash = 2;
}
